--- a/css5.html
+++ b/css5.html
@@ -13,7 +13,7 @@
             margin: 0 0 10px 0;
             padding: 10px;
             list-style: none;
-            background-color: yellow; /* Setting the background color to yellow */
+            background-color: yellow; 
         }
 
         .main-nav a {
